# wallpaper-app

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-backend/: index.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: store.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: db_services copy.rs  db_services.rs  mod.rs  sync_service.rs  wallpaper_service.rs
src/components/: BuyCreditsModal.tsx  GoogleAd.tsx  Header.tsx  LanguageSwitcher.tsx  Sidebar copy.tsx  Sidebar.tsx  ToggleButton.tsx
src/components/ui/: Banner.tsx  CategoryScroll.tsx  ConfirmDialog.tsx  OptimizedImage.tsx  WallpaperCard.tsx  WallpaperPreviewModal.tsx  switch.tsx
src/constants/: index.ts  language.ts  translation.ts
src/contexts/: LanguageContext.tsx  ThemeContext.tsx
src/data/: freeWallpapers.ts  mockData.ts  wallpapers.ts
src/hooks/: useCategories.ts  useSidebarItems.ts  useTranslation.ts  useWindowDimensions.ts
src/lib/: wallpaperService.ts
src/pages/: AccountPage.tsx  FavoritePage.tsx  GalleryPage.tsx  GeneratePage.tsx  HomePage.tsx  SettingsPage.tsx  index.tsx
src/store/: useWallpaperStore.ts
src/types/: category.ts  index.ts  language.ts  page.ts  translationKey.ts  wallpaper.ts
src/utils/: index.ts
