[package]
name = "wallpaperremix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wallpaperremix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wallpaper = { version = "3.2.0", features = ["from_url"] }
tauri = { version = "2.5", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"
dirs = "6.0.0"
sanitize-filename = "0.5"
app_dirs2 = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
itertools = "0.12"
tauri-plugin-store = { version = "2.0.0-rc.4" }
tauri-plugin-autostart = "2.3.0"


